--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# For PCBs designed using KiCad: http://www.kicad-pcb.org/
+# Format documentation: http://kicad-pcb.org/help/file-formats/
+
 # Temporary files
 *.000
 *.bak
@@ -13,3 +16,14 @@ fp-info-cache
 
 # Netlist files (exported from Eeschema)
 *.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
+
+# Cache files
+*-cache.lib
